Updated footer content and styling to fix alignment and space issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,13 @@ body {
     color: darkgray;
     max-width: 100%;
     text-align: center;
+    margin-bottom: 0;
 }
 
 .section-content {
     border-top: 1px solid #0AF505;
     overflow: hidden;
+    padding-bottom: 10px;
 }
 
 .buy-button {
@@ -104,9 +106,13 @@ section {
 }
 
 .social-links li i {
-    font-size: 2.5rem;
+    font-size: 4.5rem;
     color: darkgray;
     padding: 10px;
+}
+
+.social-links li i:hover {
+    color: #0AF505;
 }
 
 .footer-element {
@@ -114,10 +120,11 @@ section {
     font-weight: 300;
     color: #0AF505;
     padding-top: 5px;
+    margin: auto;
+    text-align: center;
 }
-
-.events {
-    margin: 10px;
+.events{
+    font-size: 1.5rem;
 }
 
 /*---- Home Page ----*/
